Attemt to fix horizontal scrolling bug/3

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,8 @@
 
 html {
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -505,16 +507,17 @@ input[name='q']::placeholder {
 @media (min-width: 1200px) {
     .container {
         max-width: 80%;
-        overflow-x: hidden !important;
     }
 
     .product-card {
         width: 14rem;
     }
+
     .shop-now-button {
         min-width: 15rem;
         margin-top: 1.5rem;
     }
+
     .product-btn {
         min-width: 14rem;
     }
@@ -576,7 +579,7 @@ input[name='q']::placeholder {
     .header-container {
         padding-top: 105px !important;
     }
-    
+
     body {
         height: calc(100vh - 105px);
     }
